--- a/MyPassionProject.CSS
+++ b/MyPassionProject.CSS
@@ -1,4 +1,24 @@
 body{
 
 	background: teal;
+.pictures {
+	margin: 0 auto; 
+	text-align: center;
+	display: inline-block;
+}
+.fifty img{
+	width: 50%
+}
+.left{
+	float: left;
+}
+.center{
+	margin: 0 auto; 
+}
+.right{ 
+float: right;
+}
+div{ 
+	float: none;
+}
 }
